# mesh_lab

./: .gitignore  CMakeLists.txt  README.md  README.txt
logs/: 1.0.0.md  1.1.0.md
src/: ObjIO.cpp  main.cpp
src/core/: MathTypes.h
src/geometry/: HalfEdgeMesh.cpp  HalfEdgeMesh.h
src/renderer/: FlatShader.cpp  FrameBuffer.cpp  FrameBuffer.h  Material.cpp  Material.h  PhongShader.cpp  Rasterizer.cpp  Rasterizer.h  Shader.h  Texture.cpp  Texture.h
